src-tauri/src/core/snapshots/llama_manager__core__estimator_tests__snapshot_mixtral_moe_q4_k_m_8x7b.snap
---
source: src/core/estimator_tests.rs
expression: estimate
---
{
  "recommended_gpu_layers": 32,
  "estimated_vram_bytes": 27800733614,
  "estimated_ram_bytes": 268435456,
  "kv_cache_bytes": 268435456,
  "fits_fully": true,
  "confidence": "Heuristic",
  "notes": [
    "Conservative margin: 12%",
    "No layer count chosen: the figures below describe 32 GPU layers"
  ],
  "vram_total_bytes": 51539607552,
  "vram_free_bytes": 51539607552,
  "projector_bytes": 0,
  "draft_bytes": 0,
  "recurrent_state_bytes": 0,
  "mtp_draft_bytes": 0
}
