src-tauri/src/core/snapshots/llama_manager__core__estimator_tests__snapshot_qwen3_q4_k_m_7b.snap
---
source: src/core/estimator_tests.rs
expression: estimate
---
{
  "recommended_gpu_layers": 32,
  "estimated_vram_bytes": 5400733614,
  "estimated_ram_bytes": 268435456,
  "kv_cache_bytes": 268435456,
  "fits_fully": true,
  "confidence": "Heuristic",
  "notes": [
    "Conservative margin: 12%"
  ]
}
